--- a/EFI/OC/config.plist
+++ b/EFI/OC/config.plist
@@ -1234,7 +1234,7 @@
 		<true/>
 		<key>Drivers</key>
 		<array>
-			<string>OpenHfsPlus.efi</string>
+			<string>HfsPlus.efi</string>
 			<string>OpenRuntime.efi</string>
 		</array>
 		<key>Input</key>
